// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TestFlow task management > matches the TaskCard snapshot 1`] = `
<article
  class="task-card "
>
  <div
    class="task-card-content"
  >
    <div
      class="task-card-heading"
    >
      <div
        class="task-title-row"
      >
        <input
          aria-label="Mark Sample task as completed"
          type="checkbox"
        />
        <h3>
          Sample task
        </h3>
      </div>
      <span
        class="priority-badge priority-High"
      >
        High
      </span>
    </div>
    <p>
      A sample task description.
    </p>
  </div>
  <div
    class="task-card-status"
  >
    <span
      aria-label="Active"
      class="task-status"
    >
      Active
    </span>
    <div
      class="task-actions"
    >
      <button
        aria-label="Mark Sample task as complete"
        type="button"
      >
        Complete
      </button>
      <button
        aria-label="Delete Sample task"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</article>
`;

exports[`TestFlow task management > renders the TaskCard snapshot 1`] = `
<article
  class="task-card "
>
  <div
    class="task-card-content"
  >
    <div
      class="task-card-heading"
    >
      <div
        class="task-title-row"
      >
        <input
          aria-label="Mark Write user interaction tests as completed"
          type="checkbox"
        />
        <h3>
          Write user interaction tests
        </h3>
      </div>
      <span
        class="priority-badge priority-Medium"
      >
        Medium
      </span>
    </div>
    <p>
      Cover important user workflows.
    </p>
  </div>
  <div
    class="task-card-status"
  >
    <span
      aria-label="Active"
      class="task-status"
    >
      Active
    </span>
    <div
      class="task-actions"
    >
      <button
        aria-label="Mark Write user interaction tests as complete"
        type="button"
      >
        Complete
      </button>
      <button
        aria-label="Delete Write user interaction tests"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</article>
`;
